force-app/main/default/objects/Closure_Action__c/Closure_Action__c.object-meta.xml
<CustomObject>
    <label>Closure Action</label>
    <nameField>
        <label>Closure Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Closure Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>