force-app/main/default/objects/Closure_Action__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Case field Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>