force-app/main/default/objects/Closure_Action__c/fields/Case_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Field_API_Name__c</fullName>
    <label>Case Field API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>