force-app/main/default/objects/Closure_Action__c/fields/Value_To_Assign__c.field-meta.xml
<CustomField>
    <fullName>Value_To_Assign__c</fullName>
    <label>Value To Assign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>